--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ categories = ["embedded", "no-std"]
 documentation = "https://docs.rs/prohelion-wavesculptor"
 version = "0.1.0"
 edition = "2021"
-license = "MPL-2.0"
+license = "MIT"
 
 [lib]
 name = "prohelion_wavesculptor"
