--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ edition = "2021"
 license = "MIT"
 
 [lib]
-name = "prohelion_wavesculptor"
+name = "prohelion"
 
 [dependencies]
 bitflags = "1.3.2"
