--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,4 @@ name = "prohelion"
 [dependencies]
 bitflags = "1.3.2"
 bxcan = "0.7.0"
-num-complex = "0.4.3"
+num-complex = { version = "0.4.3", default-features = false }
