--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "prohelion-drivers"
+name = "phln"
 authors = [
     "The Team Arrow Racing Association firmware development team",
     "Liam Kinne <liam@kinne.io>"
@@ -12,7 +12,7 @@ edition = "2021"
 license = "MIT"
 
 [lib]
-name = "prohelion"
+name = "phln"
 
 [dependencies]
 bitflags = "1.3.2"
